Mon Aug 14 13:45:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/*.h:
          Added /**/ to the include of the export and versioned
          namespace files to get them out of the doxygen include
          pictures

Mon Aug 14 13:11:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer.mpc:
          Enabed regeneration of PortableServer.pidl

        * tao/PortableServer/PortableServer{A,C,S}.{h,cpp}:
        * tao/PortableServer/diffs/PortableServer.diff:
          Removed from the repo

Mon Aug 14 12:59:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/CodecFactory.mpc:
        * tao/ObjRefTemplate.mpc:
        * tao/PortableServer.mpc:
        * tao/RTCORBA.mpc:
        * tao/RTPortableServer.mpc:
        * tao/RTScheduler.mpc:
        * tao/PI_Server.mpc:
          Enabed regeneration of *_include.pidl files, this will result
          in an almost empty C.cpp file but that is needed to retrigger
          the regeneration of the header files.

        * tao/CodecFactory/IOP_Codec_include{A,C,S}.h:
        * tao/ObjRefTemplate/ObjectReferenceTemplate_include{A,C,S}.h:
        * tao/PI_Server/PI_Server_include{A,C,S}.h:
        * tao/PortableServer/PortableServer_include{A,C,S}.h:
        * tao/RTCORBA/RTCORBA_include{A,C,S}.h:
        * tao/RTPortableServer/RTPortableServer_include{A,C,S}.h:
        * tao/RTScheduling/RTScheduler_include{A,C,S}.h:
        * tao/RTScheduling/diffs/RTScheduler.diff:
        * tao/RTPortableServer/RTPortableServerA.h:
          Removed from the archive

Mon Aug 14 12:49:11 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_visitor_operation/ami_cs.cpp:
        * TAO_IDL/be/be_visitor_operation/operation.cpp:
        * TAO_IDL/be_include/be_global.h:

          Added a new option (-b) which controls the use of clonable in
          arguments on oneway calls.

        * tao/AnyTypeCode/TypeCode.h: