@@ -1,3 +1,13 @@
+Mon Aug 14 17:21:00 UTC 2006  Yan Dai  <dai_y@ociweb.com>
+
+        * tao/PortableServer/Object_Adapter.cpp:
+
+          Fixed a bug in open() on minimum corba builds. The problems is
+          the new poa_manager passed to create_Root_POA() was actually 
+          destructed when exit from open() function. This would cause 
+          access violation when application access the poa manager in 
+          the Root_POA.
+
 Mon Aug 14 13:45:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/*.h:
